<resources>
  <string name="app_name">Web Server</string>
  <string name="change_path_button">Change</string>
  <string name="error_invalid_port">ERROR: Port must be between 1 and 65535.</string>
  <string name="no">No</string>
  <string name="port_below_1024_warning">Ports below 1024 require root access.</string>
  <string name="server_info_title">Server Information</string>
  <string name="server_ip_label">Server IP:</string>
  <string name="server_path_label">Server path:</string>
  <string name="server_port_label">Server port:</string>
  <string name="server_status_label">Server status:</string>
  <string name="start_server_button">Start Server</string>
  <string name="status_running">RUNNING</string>
  <string name="status_stopped">STOPPED</string>
  <string name="stop_server_button">Stop Server</string>
  <string name="yes">Yes</string>
  <string name="foreground_service_description">Web server is running in the background to serve files.</string>
  <string name="discovery_service_description">Searching for other WebServer instances on the local network</string>
</resources>
